tree-sitter-souffle/test/corpus/directive/include.txt
====================================
include 1
====================================

.include "src/main.dl"

---

(source_file
  (include_directive
    (include_kw)
    (string_literal)))

====================================
include 2
====================================

.include "foo.dl"
.include "bar.dl"

---

(source_file
  (include_directive
    (include_kw)
    (string_literal))
  (include_directive
    (include_kw)
    (string_literal))
)
